# platformpilot-rag

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: dependencies.py  health.py  ingest.py  query.py  schemas.py  search.py
app/core/: config.py  metrics.py
app/db/: models.py  session.py
app/services/: answer_generator.py  chunker.py  embedder.py  llm_client.py  retriever.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
tests/: conftest.py  test_answer_generator.py  test_chunker.py  test_health.py  test_ingest.py  test_ingest_integration.py  test_llm_client.py  test_models.py  test_query_endpoint.py  test_query_integration.py  test_retriever.py  test_search_endpoint.py
